# llm-epistemic-belief-0328-claude

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
data/: eval_set.json  exploratory_set.json  train_set.json
datasets/: .gitignore  README.md  fact_or_opinion_samples.json  r1_nonambigqa_epistemic_samples.json  r1_triviaqa_epistemic_samples.json
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_search_results/: arxiv_epistemic_belief.xml  arxiv_epistemic_reasoning.xml  arxiv_false_belief.xml  arxiv_tom.xml  ss_epistemic_llm.json  ss_epistemic_markers.json  ss_false_belief.json
papers/: README.md
papers/pages/: 2410.21195_belief_in_the_machine_manifest.txt  emnlp2024_defining_knowledge_manifest.txt
results/: all_model_summaries.json  baseline_results.json  config.json  full_analysis.json  gpt41_results.json  gpt4o_mini_results.json  gpt4o_results.json
results/predictions/: baseline_predictions.json  exploratory_predictions.json  gpt41_predictions.json  gpt4o_mini_predictions.json  gpt4o_predictions.json
src/: analyze_results.py  baseline.py  error_analysis.py  prepare_data.py  run_additional_models.py  run_exploratory.py  run_llm_experiments.py
