[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "datasets>=4.6.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
